update docker images and deploy radiology module
* pull docker images from teleivo/xxx
* deploy radiology module from docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   db:
-    image: openmrs-platform-mysql
+    image: teleivo/openmrs-platform-mysql:2.0.0
     ports:
       - "3306:3306"
     container_name: &db openmrs-platform-mysql
@@ -11,10 +11,10 @@ services:
       MYSQL_PASSWORD: &openmrs_db_password openmrs
       MYSQL_DATABASE: &openmrs_db openmrs
   openmrs:
-    image: openmrs-platform
+    image: teleivo/openmrs-module-radiology:latest
     ports:
       - "8080:8080"
-    container_name: openmrs-platform
+    container_name: openmrs-module-radiology
     depends_on:
       - db
     environment:
